Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -18,7 +18,7 @@ description: 'Welcome to the home of your new documentation'
 
 First we must do the following:
 
-1. Breathe in deeply
+1. Breathe in deeply (then breathe out)
 2. Contemplate all of the docs you have read before
 3. Acknowledge our coding ancestors
 4. Start typing
