--- a/introduction.mdx
+++ b/introduction.mdx
@@ -21,7 +21,7 @@ First we must do the following:
 1. Breathe in deeply (then breathe out)
 2. Contemplate all of the docs you have read before
 3. Acknowledge our coding ancestors
-4. Start typing
+4. Start typing in vim
 
 The first step to world-class documentation is setting up your editing environments.
 
