--- a/introduction.mdx
+++ b/introduction.mdx
@@ -16,6 +16,10 @@ description: 'Welcome to the home of your new documentation'
 
 ## Setting up
 
+<Card title="Alpha Docs">
+    These docs are in alpha and should be treated with a whole shaker of salt
+</Card>
+
 The first step to world-class documentation is setting up your editing environments.
 
 <CardGroup cols={2}>
